<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="btn_spotify_streamer">Spotify Streamer</string>
    <string name="btn_scores_app">Scores App</string>
    <string name="btn_library_app">Library App</string>
    <string name="btn_build_it_bigger">Build It Bigger</string>
    <string name="btn_bacon_reader">Bacon Reader</string>
    <string name="btn_capstone_my_app">Capstone: My Own App</string>

</resources>
