<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/projects_names_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.worlddomination.mushroom.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:text="My Nanodegree Apps!"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_spotify_streamer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoText"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:text="@string/btn_spotify_streamer"
        android:theme="@style/projects_buttons" />

    <Button
        android:id="@+id/btn_scores_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_spotify_streamer"
        android:layout_centerInParent="true"
        android:text="@string/btn_scores_app"
        android:theme="@style/projects_buttons" />

    <Button
        android:id="@+id/btn_library_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_scores_app"
        android:layout_centerInParent="true"
        android:text="@string/btn_library_app"
        android:theme="@style/projects_buttons" />

    <Button
        android:id="@+id/btn_build_it_bigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_library_app"
        android:layout_centerInParent="true"
        android:text="@string/btn_build_it_bigger"
        android:theme="@style/projects_buttons" />

    <Button
        android:id="@+id/btn_bacon_reader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_build_it_bigger"
        android:layout_centerInParent="true"
        android:text="@string/btn_bacon_reader"
        android:theme="@style/projects_buttons" />

    <Button
        android:id="@+id/btn_capstone_my_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_bacon_reader"
        android:layout_centerInParent="true"
        android:text="@string/btn_capstone_my_app"
        android:theme="@style/projects_buttons" />


</RelativeLayout>
